--- a/css/css grid article.html
+++ b/css/css grid article.html
@@ -123,6 +123,7 @@ html, body {
 </head>
 <body>
 <!-- new feature, test pull request -->
+<!-- new feature2, test pull request -->
 <article>
 <h1>Running any NPM package in the browser locally</h1>
 <p>JavaScript has never had any official solution for distributing packages, and every web platform (Rails, Django etc) has their own idea of how to structure and package JavaScript. In the last few years NPM has started becoming the canonical way of distribution, with Webpack as the build system, but there’s no way to load NPM packages in the browser without a server-side component.</p>
