experiments with js

--- a/css/test hover hidden.html
+++ b/css/test hover hidden.html
@@ -26,7 +26,7 @@
       height: 100px;
     }
     .divVisible:hover + .marker, .divHidden:hover + .marker{
-      background-color: green;
+      /* background-color: green; */
     }
 
     .border2:hover > .marker {
